# famaly-cash-flow

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202605120001_create_core_tables.py  202605120002_create_import_and_transaction_tables.py
backend/app/: __init__.py
backend/app/api/: router.py
backend/app/api/routes/: health.py  imports.py
backend/app/core/: config.py
backend/app/db/: base.py  seed_system_categories.py  system_categories.py
backend/app/importers/: __init__.py  bank_xlsx.py
backend/app/models/: __init__.py  account.py  categorization_rule.py  category.py  family.py  import_batch.py  merchant.py  transaction.py  user.py
backend/app/schemas/: imports.py
backend/app/services/: __init__.py  import_preview.py
backend/tests/: test_bank_xlsx_importer.py  test_database_models.py  test_health.py  test_import_preview_service.py  test_imports_api.py  test_system_categories.py
docs/: analytics-and-recommendations.md  api-contract-decisions.md  api-design.md  architecture.md  backlog.md  bank-xlsx-analysis.md  budgets-notifications-recommendations.md  categorization.md  category-taxonomy.md  dashboard-and-reports.md  data-model.md  database-schema.md  deployment-google-cloud.md  development-workflow.md  environments-and-cicd.md  implementation-plan.md  implementation-readiness.md  import-preview-api.md  import-preview-flow.md  import-preview-persistence.md  learning-notes.md  localization.md  mvp-scope.md  (+10 more)
(+6 files in other folders)
